# gotradetalk-ui

./: .env.example  .gitignore  Dockerfile  README.md  bootstrap.html  index.html  package-lock.json  package.json  playwright.config.mjs  vite.config.ts
.github/workflows/: release-desktop.yml
deploy/nginx/: default.conf
docs/: ios-app-bootstrap.md  notebook-mobile-runtime-notes.md  notebook-offline-sync-plan.md  plugin-platform-plan.md  room-model-migration-plan.md  updater-github-releases.md  work-tasks-feature-plan.md
docs/guides/: Agent-Protocol.md  PRD-GoTradeTalk-v1.1.md  PRD-GoTradeTalk-v2.0-MatrixSDK.md  Specs-GoTradeTalk-v2.0-MatrixSDK.md  Translation-Rules-v1.md  desktop-release-plan.md  frontend-functional-specification.md  插件中心定位说明.md
docs/improvements/: 2026-03-24-notebook-terminal-auth-logout.md  Attachment-Feature-Plan-v2.1.md  Attachment-Regression-Automation-v1.0.md  (+10 more)
e2e/: README.md  UAT-CHECKLIST-v1.md
public/: splashscreen.html
scripts/: files-center-regression.mjs  generate-updater-manifest.mjs  regression-matrix.mjs  tasks-regression.test.mjs
src/: App.css  App.tsx  bootstrap.ts  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/drawable-v24/: ic_launcher_foreground.xml
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
tests/: notebook-terminal-auth-logout.test.ts  timeline-behavior.test.ts
(+157 files in other folders)
