[package]
name = "gotradetalk-desktop"
version = "0.1.34"
description = "Desktop wrapper for the GoTradeTalk client"
authors = ["GoTradeTalk"]
license = "Proprietary"
repository = "https://github.com/matrix-gitradetalk/gotradetalk-ui"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gotradetalk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
base64 = "0.22.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "devtools"] }
tauri-plugin-http = "2.5.7"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.10.0"
thiserror = "2.0.18"
url = "2.5.8"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "json"] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
